--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a>,
             <a href="https://twitter.com/keinehobbies" title="Follow Pascal on Twitter">Pascal Weiland</a> &amp;
             <a href="http://www.twitter.com/" title="Follow Paul on Twitter">Paul Meinhardt</a>.
-            Design by <a href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a>.
+            Design by <a href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a> &amp; <a href="http://www.twitter.com/plankton" title="Follow Darren on Twitter">Darren Cadwallader</a>.
           </p>
         </div>
         <div>
