Add @ryyppy talk proposal

--- a/index.html
+++ b/index.html
@@ -74,14 +74,24 @@
             </div>
             -->
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>Flowtype: Let's Build a Great Typing Experience with 3rd Party Modules</h3>
+              <p class="speaker-name">Patrick Stapfer - <a href="https://twitter.com/ryyppy" target="parent">@ryyppy</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                Flowtype is a great tool to statically type your JavaScript code... but a type system is only useful as soon as all external 
+                dependencies are typed as well.
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                There are two ways to vendor flow typings for your third party modules. In this talk, I want to 
+                explain how you can consume and deliver flow typings without any troubles and reap the benefits of 
+                a nicely typed codebase. 
+              </p>
+              <p>
+              <b>About me:</b> I am a huge flowtype enthusiast and have been using this tool for almost a year and had a long way to go before
+              I really understood the tooling and the ecosystem around it. 
+              </p>
+              <p>
+              I was part of the <a href="https://github.com/flowtype/flow-typed" target="parent">flow-typed</a> project from day #1 and
+              already gradually introduced typings in various projects during my freelancing work.
               </p>
             </div>
 
