Add React / Meteor talk

--- a/index.html
+++ b/index.html
@@ -96,14 +96,13 @@
             </div>
 
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>Deploying React with Meteor</h3>
+              <p class="speaker-name"><a href="http://www.callum-macdonald.com/" target="_blank">Callum Macdonald</a> / <a href="https://superlumen.io/" target="_blank">superlumen.io</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                A quick intro to how Meteor and React play together. Meteor is probably the fastest way to get React running, from development to production. We'll build and deploy a demo app in the 25 minute talk with time left for questions.
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                <strong>About me:</strong> At <a href="https://superlumen.io/" target="_blank">superlumen.io</a> we take about one React / Meteor project per month. Our unrelenting focus is on speed of development. Idea to launched in the shortest possible time. We regularly look for alternatives to Meteor that would let us move faster, but have yet to find one.
               </p>
             </div>
 
