Add React Native presentation

--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
             </div>
             -->
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>Building React Native Apps interactively</h3>
+              <p class="speaker-name">Paulus Esterhazy</p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+Creators cannot work blindly; they need immediate feedback. In conjunction with React Native, ClojureScript offers a way to build apps interactively.
+In this live coding session I will show how to build up a simple iOS app step by step from the REPL, using principles of functional programming.                
               </p>
-              <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+<p>
+  Paulus (<a href="https://twitter.com/pesterhazy">@pesterhazy</a>) is Head of Engineering at Fy, a Berlin-based marketplace for accessories. Fy is an early adaptor of React Native.
               </p>
             </div>
 
