--- a/index.html
+++ b/index.html
@@ -108,14 +108,16 @@
             </div>
 
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>Easily create Redux-based apps with React Native</h3>
+              <p class="speaker-name">Wojciech Ogrodowczyk - <a href="https://twitter.com/yoshuawuyts" target="parent">@sharnik</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                In this talk we'll get a simple introduction what benefits would using Redux bring to our React Native applications
+                and how to use Ignite - a framework for React Native applications - to get started with it easily and painlessly. 
+                We'll live-code a small feature to see how easy it is to use in practise.
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                Wojciech runs a development consultancy <a href="http://brainsandbeards.com">Brains&amp;Beards</a> where he builds 
+                cool mobile products and teaches others how to do that as well.
               </p>
             </div>
 
