Code splitting talk proposal

--- a/index.html
+++ b/index.html
@@ -86,16 +86,17 @@ In this live coding session I will show how to build up a simple iOS app step by
             </div>
 
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>Code splitting with Webpack: alternative approach to route-based chunking</h3>
+              <p class="speaker-name">Yevgen Safronov - <a href="https://twitter.com/ryyppy" target="parent">@sejoker</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                It's common nowadays to ship all JS in a single file to the client. As a result, most of the time we load extra bits of the code that aren't required for the current page.
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                Code-splitting is one answer to the problem of monolithic bundles. It’s the idea that by defining split-points in code, it can be divided into different files that are lazy loaded on demand. The technique improves startup time and helps us get to being interactive sooner.
               </p>
-            </div>
+              <p>
+              <b>About me:</b> Obsessed with making auctionata.com load faster.
+          </div>
 
             <div class="speaker">
               <h3>Beat the framework dependency – How to migrate an Angular 1.x app with over 100.000 lines of code to React.</h3>
