fix twitter handle

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             -->
             <div class="speaker">
               <h3>Code splitting with Webpack: alternative approach to route-based chunking</h3>
-              <p class="speaker-name">Yevgen Safronov - <a href="https://twitter.com/ryyppy" target="parent">@sejoker</a></p>
+              <p class="speaker-name">Yevgen Safronov - <a href="https://twitter.com/sejoker" target="parent">@sejoker</a></p>
               <p>
                 It's common nowadays to ship all JS in a single file to the client. As a result, most of the time we load extra bits of the code that aren't required for the current page.
               </p>
