--- a/index_20171212.html
+++ b/index_20171212.html
@@ -55,7 +55,7 @@
     <main role="main" class="content clearfix">
       <article class="clearfix">
         <header class="clearfix center">
-          <h2>Next meetup on January 23<sup>rd</sup></h2>
+          <h2>Meetup on December 12th, 2016</h2>
         </header>
         <!-- TALKS -->
         <section class="clearfix">
@@ -74,38 +74,49 @@
             </div>
             -->
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>Flowtype: Let's Build a Great Typing Experience with 3rd Party Modules</h3>
+              <p class="speaker-name">Patrick Stapfer - <a href="https://twitter.com/ryyppy" target="parent">@ryyppy</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                Flowtype is a great tool to statically type your JavaScript code... but a type system is only useful as soon as all external
+                dependencies are typed as well.
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
-              </p>
-            </div>
-
-            <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
-              <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                There are two ways to vendor flow typings for your third party modules. In this talk, I want to
+                explain how you can consume and deliver flow typings without any troubles and reap the benefits of
+                a nicely typed codebase.
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+              <b>About me:</b> I am a huge flowtype enthusiast and have been using this tool for almost a year and had a long way to go before
+              I really understood the tooling and the ecosystem around it.
+              </p>
+              <p>
+              I was part of the <a href="https://github.com/flowtype/flow-typed" target="parent">flow-typed</a> project from day #1 and
+              already gradually introduced typings in various projects during my freelancing work.
               </p>
             </div>
 
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>Deploying React with Meteor</h3>
+              <p class="speaker-name"><a href="http://www.callum-macdonald.com/" target="_blank">Callum Macdonald</a> / <a href="https://superlumen.io/" target="_blank">superlumen.io</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                A quick intro to how Meteor and React play together. Meteor is probably the fastest way to get React running, from development to production. We'll build and deploy a demo app in the 25 minute talk with time left for questions.
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                <strong>About me:</strong> At <a href="https://superlumen.io/" target="_blank">superlumen.io</a> we take about one React / Meteor project per month. Our unrelenting focus is on speed of development. Idea to launched in the shortest possible time. We regularly look for alternatives to Meteor that would let us move faster, but have yet to find one.
+              </p>
+            </div>
+
+            <div class="speaker">
+              <h3>Easily create Redux-based apps with React Native</h3>
+              <p class="speaker-name">Wojciech Ogrodowczyk - <a href="https://twitter.com/yoshuawuyts" target="parent">@sharnik</a></p>
+              <p>
+                In this talk we'll get a simple introduction what benefits would using Redux bring to our React Native applications
+                and how to use Ignite - a framework for React Native applications - to get started with it easily and painlessly.
+                We'll live-code a small feature to see how easy it is to use in practise.
+              </p>
+              <p>
+                Wojciech runs a development consultancy <a href="http://brainsandbeards.com">Brains&amp;Beards</a> where he builds
+                cool mobile products and teaches others how to do that as well.
               </p>
             </div>
 
@@ -150,19 +161,6 @@
           </p>
         </div>
       </div>
-      <section>
-        <div class="clearfix one-col">
-          <div>
-            <h2>Past Meetups</h2>
-            <ul>
-              <li>
-                <a href='index_20171212.html'>12.12.2017 on Flowtype, Deploying React and Redux-based React Native</a>
-              </li>
-
-            </ul>
-          </div>
-        </div>
-      </section>
       <section>
         <div class="clearfix one-col">
           <div>
