--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <p class="speaker-name">Paulus Esterhazy</p>
               <p>
 Creators cannot work blindly; they need immediate feedback. In conjunction with React Native, ClojureScript offers a way to build apps interactively.
-In this live coding session I will show how to build up a simple iOS app step by step from the REPL, using principles of functional programming.                
+In this live coding session I will show how to build up a simple iOS app step by step from the REPL, using principles of functional programming.
               </p>
 <p>
   Paulus (<a href="https://twitter.com/pesterhazy">@pesterhazy</a>) is Head of Engineering at Fy, a Berlin-based marketplace for accessories. Fy is an early adaptor of React Native.
@@ -98,14 +98,13 @@ In this live coding session I will show how to build up a simple iOS app step by
             </div>
 
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>Beat the framework dependency – How to migrate an Angular 1.x app with over 100.000 lines of code to React.</h3>
+              <p class="speaker-name"><a href="https://twitter.com/sfroestl"> Sebastian Fröstl</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                The JS environment is currently probably the fastest growing development ecosystem. What do you do when new concepts pop up within months? Can you still embrace new technologies? How can you ensure minimal dependency on a framework? How can you migrate without rewriting from scratch?
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                 At <a href="https://www.small-improvements.com">Small Improvements</a> we’ve build a huge Angular 1.x application and are on our way to migrate to React/Redux. I want to share our strategy, patterns and lessons learned from taking on that journey.
               </p>
             </div>
 
