--- a/index_20170123.html
+++ b/index_20170123.html
@@ -55,7 +55,7 @@
     <main role="main" class="content clearfix">
       <article class="clearfix">
         <header class="clearfix center">
-          <h2>Next meetup on February 20<sup>th</sup></h2>
+          <h2>Next meetup on January 23<sup>rd</sup></h2>
         </header>
         <!-- TALKS -->
         <section class="clearfix">
@@ -75,26 +75,26 @@
             -->
 
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>Code splitting with Webpack: alternative approach to route-based chunking</h3>
+              <p class="speaker-name">Yevgen Safronov - <a href="https://twitter.com/sejoker" target="parent">@sejoker</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                It's common nowadays to ship all JS in a single file to the client. As a result, most of the time we load extra bits of the code that aren't required for the current page.
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                Code-splitting is one answer to the problem of monolithic bundles. It’s the idea that by defining split-points in code, it can be divided into different files that are lazy loaded on demand. The technique improves startup time and helps us get to being interactive sooner.
               </p>
-            </div>
+              <p>
+              <b>About me:</b> Obsessed with making auctionata.com load faster.
+          </div>
 
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>Beat the framework dependency – How to migrate an Angular 1.x app with over 100.000 lines of code to React.</h3>
+              <p class="speaker-name"><a href="https://twitter.com/sfroestl"> Sebastian Fröstl</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                The JS environment is currently probably the fastest growing development ecosystem. What do you do when new concepts pop up within months? Can you still embrace new technologies? How can you ensure minimal dependency on a framework? How can you migrate without rewriting from scratch?
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                 At <a href="https://www.small-improvements.com">Small Improvements</a> we’ve build a huge Angular 1.x application and are on our way to migrate to React/Redux. I want to share our strategy, patterns and lessons learned from taking on that journey.
               </p>
             </div>
 
@@ -157,10 +157,7 @@
             <h2>Past Meetups</h2>
             <ul>
               <li>
-                <a href='index_20171212.html'>12.12.2016 on Flowtype, Deploying React and Redux-based React Native</a>
-              </li>
-              <li>
-                <a href='index_20170123.html'>23.01.2017 on Angular1 to React migration and code splitting with webpack</a>
+                <a href='index_20161212.html'>12.12.2016 on Flowtype, Deploying React and Redux-based React Native</a>
               </li>
             </ul>
           </div>
