Add ClojureScript+React talk

--- a/index.html
+++ b/index.html
@@ -75,14 +75,15 @@
             -->
 
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>ClojureScript and React.js</h3>
+              <p class="speaker-name"><a href="https://twitter.com/plexus">Arne Brasseur</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                ClojureScript and React are a match made in heaven. This talk
+                will give a brief introduction to ClojureScript, and show what
+                it's like to develop UIs in it with React.
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                Arne creates beautiful screencasts at <a href="https://lambdaisland.com">Lambda Island</a>.
               </p>
             </div>
 
