Adding animations talk

--- a/index.html
+++ b/index.html
@@ -88,14 +88,10 @@
             </div>
 
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>Animations with React &amp; Redux</h3>
+              <p class="speaker-name">Callum Macdonald<br /><a href="https://superlumen.io/">superlumen.io</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
-              </p>
-              <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                A quick introduction to animations with react and redux, including a few tips &amp; tricks on <strong>redux performance optimisation</strong>.
               </p>
             </div>
 
