Blank meetup for 18.04.2017

--- a/index_20170320.html
+++ b/index_20170320.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>ReactJS.berlin &mdash; Berlin's ReactJS Usergroup</title>
     <meta name="description" content="ReactJS.berlin is a usergroup focused on ReactJS and related
-     topics. We meet regularly each month at 7:00 p.m. @bitcrowd office,
+     topics. We meet regularly on the 3rd Monday each month at 7:00 p.m. @bitcrowd office,
      Oranienstr. 6 in Berlin-Kreuzberg.">
     <meta name="keywords" content="ReactJS, JavaScript, Usergroup, Berlin, Programming, JS">
     <meta name="author" content="ReactJS.berlin">
@@ -46,7 +46,7 @@
         </h1>
         <p class="ug-info triangle-border left">
           ReactJS.berlin is a usergroup focused on ReactJS and related
-     topics. We meet regularly each month at 7p.m.
+     topics. We meet regularly on the 2nd Monday each month at 7p.m.
           <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd office</a>,
           Oranienstr. 6 in Berlin-Kreuzberg. Talks start at 7:30pm.
         </p>
@@ -55,7 +55,7 @@
     <main role="main" class="content clearfix">
       <article class="clearfix">
         <header class="clearfix center">
-          <h2>Next meetup on April 24<sup>th</sup></h2>
+          <h2>Next meetup on March 20<sup>th</sup></h2>
         </header>
         <!-- TALKS -->
         <section class="clearfix">
@@ -74,39 +74,32 @@
             </div>
             -->
 
-             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+            <div class="speaker">
+              <h3>ClojureScript and React.js</h3>
+              <p class="speaker-name"><a href="https://twitter.com/plexus">Arne Brasseur</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                ClojureScript and React are a match made in heaven. This talk
+                will give a brief introduction to ClojureScript, and show what
+                it's like to develop UIs in it with React.
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
-              </p>
-            </div>
-
-             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
-              <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
-              </p>
-              <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                Arne creates beautiful screencasts at <a href="https://lambdaisland.com">Lambda Island</a>.
               </p>
             </div>
 
-             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+            <div class="speaker">
+              <h3>Animations with React &amp; Redux</h3>
+              <p class="speaker-name">Callum Macdonald<br /><a href="https://superlumen.io/">superlumen.io</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                A quick introduction to animations with react and redux, including a few tips &amp; tricks on <strong>redux performance optimisation</strong>.
               </p>
+            </div>
+
+            <div class="speaker">
+              <h3>Mimstris: porting an arcade puzzle game to React / Redux</h3>
+              <p class="speaker-name">Mims H. Wright<br><a href="https://twitter.com/mimshwright">@mimshwright</a></p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                I thought it would be fun to build a tetris clone so I could make weird-shaped pieces. But what started out as an innocent game tutorial soon became a semi-obsessive crash course in modern front-end concepts. It also is quite fun to play! Come watch as I retell my journey from nothing to a 60-line package.json file.
               </p>
             </div>
 
@@ -157,13 +150,10 @@
             <h2>Past Meetups</h2>
             <ul>
               <li>
-                <a href='index_20170320.html'>20.03.2017 on Animations, ClojureScript and and Mimstris</a>
+                <a href='index_20171212.html'>12.12.2016 on Flowtype, Deploying React and Redux-based React Native</a>
               </li>
               <li>
                 <a href='index_20170123.html'>23.01.2017 on Angular1 to React migration and code splitting with webpack</a>
-              </li>
-              <li>
-                <a href='index_20171212.html'>12.12.2016 on Flowtype, Deploying React and Redux-based React Native</a>
               </li>
             </ul>
           </div>
