--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <p class="speaker-name">Nikolas Burk<br />Developer at Graphcool</p>
               <p>
                 GraphQL is the successor of REST APIs and a declarative way to fetch and update data. This new paradigm is unlocking a completely new ecosystem turning frontend developers into superheroes.<br />
-                After a quick introduction, we'll setup a fully-fledged GraphQL backend using Graphcool and implement a realtime chat using React and Apollo Client.
+                After a quick introduction to GraphQL, we'll setup a fully-fledged GraphQL backend using Graphcool and implement a realtime chat using React and Apollo Client.
               </p>
             </div>
 
