--- a/index.html
+++ b/index.html
@@ -75,10 +75,14 @@
             -->
 
              <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>Authentication, Permissions &amp; Error Handling with GraphQL</h3>
+              <p class="speaker-name">Nikolas Burk<br />Developer at Graphcool</p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+               GraphQL is a new and declarative way of fetching and updating data. It’s currently replacing REST as an 
+                API standard by making client-server communication a lot more efficient and enabling new developer 
+                workflows that allow for rapid product iterations. 
+                After a quick introduction to GraphQL, we'll setup a fully-fledged GraphQL backend using 
+                <a href="https://www.graph.cool">Graphcool</a> and explore the query-based permission system by practical examples.
               </p>
               <p>
                 Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
