--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                 API standard by making client-server communication a lot more efficient and enabling new developer 
                 workflows that allow for rapid product iterations. 
                 After a quick introduction to GraphQL, we'll setup a fully-fledged GraphQL backend using 
-                <a href="https://www.graph.cool">Graphcool</a> and explore the query-based permission system by practical examples.
+                <a href="https://www.graph.cool">Graphcool</a> and explore the query-based permission system by 
+                practical examples to learn how it compares to REST.
               </p>
               <p>
                 Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
