--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 workflows that allow for rapid product iterations. 
                 After a quick introduction to GraphQL, we'll setup a fully-fledged GraphQL backend using 
                 <a href="https://www.graph.cool">Graphcool</a> and explore the query-based permission system by 
-                practical examples to learn how it compares to REST.
+                practical examples.
               </p>
               <p>
                 Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
