Add talk proposal

--- a/index.html
+++ b/index.html
@@ -92,14 +92,13 @@
             </div>
 
              <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>Keeping styles consistent</h3>
+              <p class="speaker-name">Michał Koźmiński<br />Developer @ Klara</p>
               <p>
                 You did some great stuff with JavaScript? You want to show it to the community?
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                Keeping track of consistent UI as codebase growths might be challenging. The talk will cover dealing with shared UI and how to prepare style guidelines. Comparing some of the popular solutions like react-storybook and react-styleguidist.
               </p>
             </div>
 
