ADD storybook talk proposal
`¯\_(ツ)_/¯`

--- a/index.html
+++ b/index.html
@@ -103,17 +103,19 @@
             </div>
 
              <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>The story oof Storybook</h3>
+              <p class="speaker-name">Norbert de Langen<br />Frontend Consultant @Xebia</p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                React Storybook is a UI development environment for your React components. <br />
+                With it, you can visualise different states of your UI components and develop them interactively.
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                It was developed by kadira, but is now maintained by an OS community. We’ve released version 3.0.0 very recently. I’m going to share some of the hurdles we’ve faced and are in front of us.
+              </p>
+              <p>
+                It’s not just a demo of storybook, but also a story about open source.
               </p>
             </div>
-
           </div>
         </section>
       </article>
