--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
 
              <div class="speaker">
-              <h3>The story oof Storybook</h3>
+              <h3>The story of Storybook</h3>
               <p class="speaker-name">Norbert de Langen<br />Frontend Consultant @Xebia</p>
               <p>
                 React Storybook is a UI development environment for your React components. <br />
