Updated organizers list

--- a/index.html
+++ b/index.html
@@ -134,11 +134,9 @@
           <h2>The team</h2>
           <p>
             ReactJS.berlin is organized by
-            <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a>,
-            <a href="https://twitter.com/pascalweiland" title="Follow Pascal on Twitter">Pascal Weiland</a> &amp;
-            <a href="http://www.twitter.com/pmnhrdt" title="Follow Paul on Twitter">Paul Meinhardt</a>
+            <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a>
             from
-            <a href="http://www.twitter.com/bitcrowd" title="Follow bitcrowd on Twitter">@bitcrowd</a>.
+            <a href="http://www.twitter.com/bitcrowd" title="Follow bitcrowd on Twitter">@bitcrowd</a>. Interested in joining the organizers team? Drop us a line on twitter or meetup :)
             Design by <a href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a> &amp; <a href="http://www.twitter.com/plankton" title="Follow Darren on Twitter">Darren Cadwallader</a>.
           </p>
         </div>
