announce July meetup

--- a/index_20170626.html
+++ b/index_20170626.html
@@ -55,7 +55,7 @@
     <main role="main" class="content clearfix">
       <article class="clearfix">
         <header class="clearfix center">
-          <h2>Next meetup on July 24<sup>th</sup></h2>
+          <h2>Next meetup on June 26<sup>th</sup></h2>
         </header>
         <!-- TALKS -->
         <section class="clearfix">
@@ -74,7 +74,7 @@
             </div>
             -->
 
-            <div class="speaker">
+             <div class="speaker">
               <h3>Free slot</h3>
               <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
               <p>
@@ -86,7 +86,7 @@
               </p>
             </div>
 
-            <div class="speaker">
+             <div class="speaker">
               <h3>Free slot</h3>
               <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
               <p>
@@ -98,7 +98,7 @@
               </p>
             </div>
 
-            <div class="speaker">
+             <div class="speaker">
               <h3>Free slot</h3>
               <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
               <p>
@@ -109,7 +109,6 @@
                 Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
               </p>
             </div>
-
 
           </div>
         </section>
@@ -136,9 +135,11 @@
           <h2>The team</h2>
           <p>
             ReactJS.berlin is organized by
-            <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a>
+            <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a>,
+            <a href="https://twitter.com/pascalweiland" title="Follow Pascal on Twitter">Pascal Weiland</a> &amp;
+            <a href="http://www.twitter.com/pmnhrdt" title="Follow Paul on Twitter">Paul Meinhardt</a>
             from
-            <a href="http://www.twitter.com/bitcrowd" title="Follow bitcrowd on Twitter">@bitcrowd</a>. Interested in joining the organizers team? Drop us a line on twitter or meetup :)
+            <a href="http://www.twitter.com/bitcrowd" title="Follow bitcrowd on Twitter">@bitcrowd</a>.
             Design by <a href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a> &amp; <a href="http://www.twitter.com/plankton" title="Follow Darren on Twitter">Darren Cadwallader</a>.
           </p>
         </div>
@@ -155,9 +156,6 @@
           <div>
             <h2>Past Meetups</h2>
             <ul>
-               <li>
-                <a href='index_20170626.html'>26.06.2017 on GraphQL, React Storybook and Mantaining UI consistency</a>
-              </li>
               <li>
                 <a href='index_20170320.html'>20.03.2017 on Animations, ClojureScript and and Mimstris</a>
               </li>
