Propose Ladda talk

--- a/index.html
+++ b/index.html
@@ -75,14 +75,18 @@
             -->
 
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
-              <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+              <h3>Ladda - A Plugin-driven Library for Client-Side Caching</h3>
+              <p class="speaker-name">
+                <a href="https://github.com/petercrona">Peter Crona</a>
+                <br/>
+                <a href="https://github.com/lfdm">Gernot Höflechner</a>
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+              <p>
+                In this talk we will present how we think caching should be tackled by showing [Ladda](https://github.com/ladda-js/ladda), a library that we built use in production at Small Improvements.
+                While Ladda is framework agnostic, it is also powered by a plugin driven architecture, which we use to integrate nicely with React.
+
+                We'll show you how to use Ladda with React in an elegant manner, which can also help you with state management.
               </p>
             </div>
 
