--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main role="main" class="content clearfix">
       <article class="clearfix">
         <header class="clearfix center">
-          <h2>Next meetup on July 24<sup>th</sup></h2>
+          <h2>Next meetup on Monday, September 18<sup>th</sup></h2>
         </header>
         <!-- TALKS -->
         <section class="clearfix">
