Add MobX/Inversify talk

--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
                 <a href="https://github.com/lfdm">Gernot Höflechner</a>
               </p>
               <p>
-              <p>
-                In this talk we will present how we think caching should be tackled by showing [Ladda](https://github.com/ladda-js/ladda), a library that we built use in production at Small Improvements.
+                In this talk we will present how we think caching should be tackled by showing <a href="https://github.com/ladda-js/ladda">Ladda</a>, a library that we built use in production at Small Improvements.
                 While Ladda is framework agnostic, it is also powered by a plugin driven architecture, which we use to integrate nicely with React.
 
                 We'll show you how to use Ladda with React in an elegant manner, which can also help you with state management.
@@ -91,14 +90,17 @@
             </div>
 
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
-              <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+              <h3>Scalable state management with MobX and Inversify</h3>
+              <p class="speaker-name">
+                <a href="https://github.com/tchock">Simon Jentsch</a>
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                <a href="https://github.com/mobxjs/mobx">MobX</a> is getting quite some buzz lately as an really performant alternative to Redux.
+                But one of it's drawbacks is scaling it for more complex projects.
+                <a href="https://github.com/inversify/InversifyJS">Inversify</a> helps making MobX state management scalable.
+              </p>
+              <p>
+                In this talk I will show you how to build a simple project with MobX, Inversify and TypeScript which is able to scale as the project grows.
               </p>
             </div>
 
