--- a/index_20170918.html
+++ b/index_20170918.html
@@ -55,7 +55,7 @@
     <main role="main" class="content clearfix">
       <article class="clearfix">
         <header class="clearfix center">
-          <h2>No meetup scheduled currently.</h2>
+          <h2>Next meetup on Monday, September 18<sup>th</sup></h2>
         </header>
         <!-- TALKS -->
         <section class="clearfix">
@@ -73,15 +73,34 @@
               </p>
             </div>
             -->
+
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
-              <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+              <h3>Ladda - A Plugin-driven Library for Client-Side Caching</h3>
+              <p class="speaker-name">
+                <a href="https://github.com/petercrona">Peter Crona</a>
+                <br/>
+                <a href="https://github.com/lfdm">Gernot Höflechner</a>
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                In this talk we will present how we think caching should be tackled by showing <a href="https://github.com/ladda-js/ladda">Ladda</a>, a library that we built use in production at Small Improvements.
+                While Ladda is framework agnostic, it is also powered by a plugin driven architecture, which we use to integrate nicely with React.
+
+                We'll show you how to use Ladda with React in an elegant manner, which can also help you with state management.
+              </p>
+            </div>
+
+            <div class="speaker">
+              <h3>Scalable state management with MobX and Inversify</h3>
+              <p class="speaker-name">
+                <a href="https://github.com/tchock">Simon Jentsch</a>
+              </p>
+              <p>
+                <a href="https://github.com/mobxjs/mobx">MobX</a> is getting quite some buzz lately as an really performant alternative to Redux.
+                But one of it's drawbacks is scaling it for more complex projects.
+                <a href="https://github.com/inversify/InversifyJS">Inversify</a> helps making MobX state management scalable.
+              </p>
+              <p>
+                In this talk I will show you how to build a simple project with MobX, Inversify and TypeScript which is able to scale as the project grows.
               </p>
             </div>
 
@@ -96,19 +115,6 @@
                 Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
               </p>
             </div>
-
-            <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
-              <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
-              </p>
-              <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
-              </p>
-            </div>
-
 
 
           </div>
@@ -155,9 +161,6 @@
           <div>
             <h2>Past Meetups</h2>
             <ul>
-              <li>
-                <a href='index_20170918.html'>18.09.2017 on Ladda, MobX and Inversify</a>
-              </li>
                <li>
                 <a href='index_20170626.html'>26.06.2017 on GraphQL, React Storybook and Mantaining UI consistency</a>
               </li>
@@ -168,7 +171,7 @@
                 <a href='index_20170123.html'>23.01.2017 on Angular1 to React migration and code splitting with webpack</a>
               </li>
               <li>
-                <a href='index_20161212.html'>12.12.2016 on Flowtype, Deploying React and Redux-based React Native</a>
+                <a href='index_20171212.html'>12.12.2016 on Flowtype, Deploying React and Redux-based React Native</a>
               </li>
             </ul>
           </div>
