--- a/index.html
+++ b/index.html
@@ -74,6 +74,23 @@
             </div>
             -->
             <div class="speaker">
+              <h3>React Basic - Workshop</h3>
+              <p class="speaker-name">Manjula Dube - <a href="https://twitter.com/ryyppy" target="parent">@manjula_dube</a></p>
+              <p>
+                  If you want to learn React and have never tried it. I going conducting React Basic Workshop for beginners.
+                  We will learn about ES6 basics, Virtual DOM, JSX, Stateless Components, Stateful Components, Props, States, Lifecycle Methods, React, Snapshot testing in React.
+              </p>
+              <p>
+                  We will create a simple application along our learnings so we will have something working at the end of the workshop.
+              </p>
+              <p>
+                <b>About instructor: Manjula has been obsessed with coding ever since graduated out of college. 
+                  She is international tech speaker spoken at more than 10 conferences so far. 
+                  She  loves to work with JavaScript and front end technologies like React, GraphQL. 
+                  She is organiser of Mumbai Women Coders (India) </b> 
+              </p>
+            </div>
+            <div class="speaker">
               <h3>Free slot</h3>
               <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
               <p>
