--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
             </div>
             -->
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>React Basic Workshop on 4th August 2018</h3>
+              <p class="speaker-name"><a href="https://github.com/manjula91">Manjula Dube</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                If you are beginner to React come join the workshop to start your react with me. We will learn about ES6 basics, Virtual DOM, JSX, Stateless Components, Stateful Components, Props, States, Lifecycle Methods, React, Snapshot testing in React.
+We will create a simple application along the learning so we have something working at the end of the workshop.
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                If you want to learn React and have never tried it. This workshop is for you. Come join me.Limited seats.
               </p>
             </div>
 
