--- a/index_20180804.html
+++ b/index_20180804.html
@@ -55,11 +55,11 @@
     <main role="main" class="content clearfix">
       <article class="clearfix">
         <header class="clearfix center">
-          <h2>No meetup scheduled</h2>
+          <h2>React Basic Workshop on 4th August 2018</h2>
         </header>
         <!-- TALKS -->
         <section class="clearfix">
-          <div class="three-cols clearfix">
+          <div class="clearfix">
             <!-- THIS IS WHAT A TALK ABSTRACT LOOKS LIKE
             <div class="speaker">
               <h3>Free slot</h3>
@@ -74,38 +74,19 @@
             </div>
             -->
             <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+              <h3>React Basic Workshop</h3>
+              <p class="speaker-name"><a href="https://github.com/manjula91">Manjula Dube</a></p>
               <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
+                If you are beginner to React come join the workshop to start your react with me. We will learn about ES6 basics, Virtual DOM, JSX, Stateless Components, Stateful Components, Props, States, Lifecycle Methods, React, Snapshot testing in React.
+We will create a simple application along the learning so we have something working at the end of the workshop.
               </p>
               <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
-              </p>
-            </div>
-            <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
-              <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
-              </p>
-              <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                If you want to learn React and have never tried it. This workshop is for you. Come join me. Limited seats.
               </p>
             </div>
-            <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
-              <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
-              </p>
-              <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
-              </p>
-            </div>
+
+
+
           </div>
         </section>
       </article>
@@ -150,9 +131,6 @@
           <div>
             <h2>Past Meetups</h2>
             <ul>
-              <li>
-                <a href='index_20180804.html'>04.08.2018 beginners workshop by</a> <a href="https://github.com/manjula91">Manjula Dube</a>
-              </li>
               <li>
                 <a href='index_20170918.html'>18.09.2017 on Ladda, MobX and Inversify</a>
               </li>
