Re-organise content main categories into sections

--- a/index.html
+++ b/index.html
@@ -54,45 +54,21 @@
         </p>
       </div>
     </header>
+
     <main role="main" class="content clearfix">
       <article class="clearfix">
         <header class="clearfix center">
           <h2>This ReactJS meetup group has been closed</h2>
         </header>
-        <!-- TALKS -->
-        <section class="clearfix">
-          <div class="clearfix">
-            <!-- THIS IS WHAT A TALK ABSTRACT LOOKS LIKE
-              <div class="speaker">
-                <h3>Free slot</h3>
-                <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
-                <p>
-                  You did some great stuff with JavaScript? You want to show it to the community?
-                </p>
-                <p>
-                  Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                  Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
-                </p>
-              </div>
-              -->
-          </div>
-        </section>
-      </article>
-    </main>
-    <main role="main" class="content clearfix">
-
-      <div class="clearfix">
-        <div>
+        <div class="clearfix">
           <p>
             When we started this meetup group in 2015, it was the first ReactJS focused meetup in Berlin and the comunity
             was still young. Now, some years and many great meetups later, several other meetups, courses and events
             around React have evolved. So we find that running just another one does not make sense.
           </p>
         </div>
-
-    </main>
-    <footer class="content" role="complimentary">
-      <div>
+      </article>  
+      <section>
         <h2>Looking for a React meetup, event or course?</h2>
         <p>
           If you are looking for a React meetup, event or course, we suggest to have a look at the <a
@@ -100,17 +76,15 @@
             title="Berlin's finest JavaScript Usergroup">meetup.com groups</a>. Especially <a href="http://berlinjs.org/"
             title="Berlin's finest JavaScript Usergroup">berlinjs.org</a> is a great starting point.
         </p>
-      </div>
-
-      </div>
-      <div>
+      </section>
+      <section>
         <h2>Need a location for your event?</h2>
         <p>
           The <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a> office has an event space that you
           can use for community events. It has a capacity of 90 people (seated) or 30 people (with desks for courses).
         </p>
-      </div>
-      <div>
+      </section>
+      <section>
         <h2>Need help from React experts?</h2>
         <p>
           The people at <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a> have created many ReactJS
@@ -170,9 +144,7 @@
               in google maps</a>
           </div>
         </div>
-      </div>
-
-      </div>
+      </section>
       <section>
         <div class="clearfix one-col">
           <div>
@@ -202,6 +174,9 @@
           </div>
         </div>
       </section>
+    </main>
+
+    <footer class="content" role="complimentary">
       <section>
         <div class="clearfix one-col">
           <div>
@@ -217,19 +192,22 @@
               refer to the <a href="http://rubyberlin.github.io/code-of-conduct">Berlin Code of Conduct</a>.
             </p>
           </div>
-          <div>
-            <h2>Imprint, privacy policy and legal information</h2>
-            <p>
-              This site is run by
-              <a href="http://bitcrowd.net" title="bitcrowd.net software development for startups">bitcrowd</a> -
-              please find <a href="http://bitcrowd.net/legal"
-                title="bitcrowd.net software development legal information">imprint, privacy and other legal information
-                here</a>.
-            </p>
-          </div>
+        </div>
+      </section>
+      <section>
+        <div>
+          <h2>Imprint, privacy policy and legal information</h2>
+          <p>
+            This site is run by
+            <a href="http://bitcrowd.net" title="bitcrowd.net software development for startups">bitcrowd</a> -
+            please find <a href="http://bitcrowd.net/legal"
+              title="bitcrowd.net software development legal information">imprint, privacy and other legal information
+              here</a>.
+          </p>
         </div>
       </section>
     </footer>
+
     <script>
       (function (i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
