Remove aria roles

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </head>
 
   <body>
-    <header role="banner" class="content clearfix">
+    <header class="content clearfix">
       <div class="clearfix">
         <h1>
           <a href="/">
@@ -48,14 +48,15 @@
           </a>
         </h1>
         <p class="ug-info triangle-border left">
-          ReactJS.berlin was an early ReactJS usergroup run by <a href="http://bitcrowd.net"
-            title="bitcrowd.net office">@bitcrowd</a>. We at bitcrowd are happy that the React community in berlin has now
-          spawned so many usergroups and events that it does not need this regular meetup as support any longer.
+          ReactJS.berlin was an early ReactJS usergroup run by 
+          <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a>. 
+          We at bitcrowd are happy that the React community in berlin has now spawned so many usergroups 
+          and events that it does not need this regular meetup as support any longer.
         </p>
       </div>
     </header>
 
-    <main role="main" class="content clearfix">
+    <main class="content clearfix">
       <article class="clearfix">
         <header class="clearfix center">
           <h2>This ReactJS meetup group has been closed</h2>
